kubernetes/infrastructure/inference/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inference
  labels:
    name: inference
    pod-security.kubernetes.io/enforce: privileged
