kubernetes/infrastructure/inference/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: inference
  namespace: inference
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: kube-system
      sectionName: https-domain1
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: kube-system
      sectionName: http-domain1
  hostnames:
    - inference.whydontyou.work
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: controller-manager
          port: 9000
      timeouts:
        backendRequest: 600s
        request: 600s
